@@ -1,3 +1,8 @@
+2022-04-08  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
+	* libpoke/pkl-gen.c (pkl_gen_ps_func): Fix E_no_return location in
+	lambdas.
+
 2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.h: Prototype for pkl_ast_format_loc.
